PRJ_VER=1.1.0
SUMMARY=Fedora version will now automatically updated;Fixed 879141; Fixed 992069
REDHAT_BUGZILLA=879141;992069
[Changes]
- Enhancement:
  + Fedora version will now automatically updated.
  + New scripts: 
    cmake-fedora-koji: Koji utilities.
    cmake-fedora-fedpkg: Fedpkg utilities.
  + Changed scripts:
    koji-build-scratch: fedora_1, fedora_2, 
    epel_1, epel_2 can now be used as build scopes.
  + BODHI_UPDATE_TYPE is no longer required
- Bug Fixes:
  Resolves: Bug 879141 - Excessive quotation mark for target tag_pre
  Resolves: Bug 992069 - cmake-fedora: FTBFS in rawhide
- Removed Variables: 
  + FEDORA_AUTO_KARMA

- Removed Targets:
  + bodhi_new: Submit the package to bodhi
  + fedpkg_<tag>_build: Build for tag
  + fedpkg_<tag>_commit: Import, commit and push
