@@ -218,16 +218,8 @@ IF(NOT DEFINED _MANAGE_STRING_CMAKE_)
 	SET(${var} "${_ret}")
     ENDMACRO(STRING_UNQUOTE var str)
 
-    MACRO(STRING_JOIN var delimiter str_list)
+    MACRO(STRING_JOIN var delimiter)
 	SET(_ret "")
-	FOREACH(_str ${str_list})
-	    IF(_ret STREQUAL "")
-		SET(_ret "${_str}")
-	    ELSE(_ret STREQUAL "")
-		SET(_ret "${_ret}${delimiter}${_str}")
-	    ENDIF(_ret STREQUAL "")
-	ENDFOREACH(_str ${str_list})
-
 	FOREACH(_str ${ARGN})
 	    IF(_ret STREQUAL "")
 		SET(_ret "${_str}")
@@ -236,7 +228,7 @@ IF(NOT DEFINED _MANAGE_STRING_CMAKE_)
 	    ENDIF(_ret STREQUAL "")
 	ENDFOREACH(_str ${ARGN})
 	SET(${var} "${_ret}")
-    ENDMACRO(STRING_JOIN var delimiter str_list)
+    ENDMACRO(STRING_JOIN var delimiter)
 
     FUNCTION(STRING_FIND var str search_str)
 	STRING(LENGTH "${str}" _str_len)
