@@ -1,12 +1,13 @@
 Name:       @PROJECT_NAME@
 Version:    @PRJ_VER@
-Release:    1%{?dist}
+Release:    @RPM_RELEASE_NO@%{?dist}
 Summary:    @PRJ_SUMMARY@
 @RPM_SPEC_SUMMARY_TRANSLATION_OUTPUT@
 License:    @LICENSE@
 Group:      @PRJ_GROUP@
 URL:        @RPM_SPEC_URL_OUTPUT@
-Source0:    https://fedorahosted.org/releases/c/m/%{name}/%{name}-%{version}-Source.@SOURCE_ARCHIVE_FILE_EXTENSION@
+Source0:    @RPM_SPEC_SOURCE0_OUTPUT@
+@RPM_SPEC_SOURCES_OUTPUT@
 
 BuildRoot:  %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
@@ -28,41 +29,28 @@ BuildRoot:  %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
 %build
 # $RPM_OPT_FLAGS should be loaded from cmake macro.
+
 %cmake .
 %__make VERBOSE=1  %{?_smp_mflags}
+@RPM_SPEC_POST_BUILD_SECTION_OUTPUT@
 
 %install
 %__rm -rf $RPM_BUILD_ROOT
 %__make install DESTDIR=$RPM_BUILD_ROOT
-# We install document using doc
-(cd $RPM_BUILD_ROOT/@PRJ_DOC_DIR@
-    %__rm -rf @PRJ_DOC_LIST@
-)
-
+@RPM_SPEC_POST_INSTALL_SECTION_OUTPUT@
+@RPM_SPEC_PRJ_DOC_REMOVAL_OUTPUT@
 @RPM_SPEC_FIND_LANG_SECTION_OUTPUT@
-
 @RPM_SPEC_PRE_SECTION_OUTPUT@
-
 @RPM_SPEC_PREUN_SECTION_OUTPUT@
-
 @RPM_SPEC_POST_SECTION_OUTPUT@
-
 @RPM_SPEC_POSTUN_SECTION_OUTPUT@
 
 %clean
 
 @RPM_SPEC_FILES_SECTION_OUTPUT@
-@RPM_SPEC_FILES_
-%doc @PRJ_DOC_LIST@
-%{_bindir}/cmake-fedora-newprj
-%{_bindir}/koji-build-scratch
-%{_datadir}/cmake/Modules/*.cmake
-%{_datadir}/cmake/Modules/cmake_uninstall.cmake.in
-%{_datadir}/cmake/Templates/fedora
-%config %{_sysconfdir}/cmake-fedora.conf
 
 %changelog
-* @TODAY_CHANGELOG@ @MAINTAINER@ - @PRJ_VER@-@PRJ_RELEASE_NO@
+* @TODAY_CHANGELOG@ @MAINTAINER@ - @PRJ_VER@-@RPM_RELEASE_NO@
 @CHANGELOG_ITEMS@
 
 @RPM_CHANGELOG_PREV@
